K8S/flightbookingservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-bookings-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flightbookingservice
  template:
    metadata:
      labels:
        app: flightbookingservice
    spec:
      containers:
      - name: flightbookingservice
        image: rollinodocker/flightbookingservice:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: flightbooking-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: flightbookingservice
  ports:
  - name: flightbookingservice
    protocol: TCP
    port: 80
    targetPort: 80
