K8S/flightservice-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flightservice-np
spec:
  type: NodePort
  selector:
    app: flightservice
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
