K8S/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-service
spec:
  rules:
  - host: fsociety.com
    http:
      paths:
      - path: "/api/flights"
        pathType: Prefix
        backend:
          service:
            name: flight-clusterip-service
            port: 
              number: 80
      - path: "/api/bookings"
        pathType: Prefix
        backend:
          service:
            name: flightbooking-clusterip-service
            port: 
              number: 80
